--- a/Patient/Components/Layout/Layouts/FrontLayout.razor
+++ b/Patient/Components/Layout/Layouts/FrontLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="page">
     <div class="sidebar">
-        <NavMenu />
+        <Patient.Components.Layout.LayoutComponents.NavMenu />
     </div>
 
     <main>
@@ -14,4 +14,5 @@
             @Body
         </article>
     </main>
+
 </div>
