--- a/Patient/Components/Pages/Home.razor
+++ b/Patient/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
-﻿@page "/"
+﻿@layout Layout.Layouts.FrontLayout
+@page "/"
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>  Pacjent - w ciaglej opiece </h1>
 
-Welcome to your new app.
