--- a/Patient/Components/Pages/Logging/PatientLoggingPage.razor
+++ b/Patient/Components/Pages/Logging/PatientLoggingPage.razor
@@ -1,7 +1,16 @@
-﻿@page "/logowaniePacjent"
+﻿@using Patient.Components.PageControlls
 
-<h3>PatientLoggingPage</h3>
+@layout Layout.Layouts.LoggingLayout
+@page "/logowaniePacjent"
+
+
+<Logger OnLoginCallback="HandleLogin" />
+
 
 @code {
+    
+    private async Task HandleLogin()
+    {
 
+    }
 }
