--- a/Patient/Components/Pages/Weather.razor
+++ b/Patient/Components/Pages/Weather.razor
@@ -1,4 +1,5 @@
-﻿@page "/weather"
+﻿@layout Layout.Layouts.FrontLayout
+@page "/weather"
 @attribute [StreamRendering]
 
 <PageTitle>Weather</PageTitle>
