Added some views, Created basic entities

--- a/Patient/Components/Pages/Doctor/Home.razor
+++ b/Patient/Components/Pages/Doctor/Home.razor
@@ -1,7 +1,7 @@
-﻿@layout Layout.Layouts.UserLayout
+﻿@layout Layout.UserLayout
 @page "/lekarz"
 
-<h3>Home</h3>
+<h3> Panel lekarza</h3>
 
 @code {
 
