--- a/Patient/Components/Pages/Logging/PatientLoggingPage.razor
+++ b/Patient/Components/Pages/Logging/PatientLoggingPage.razor
@@ -1,6 +1,6 @@
 ﻿@using Patient.Components.PageControlls
 
-@layout Layout.Layouts.LoggingLayout
+@layout Layout.LoggingLayout
 @page "/logowaniePacjent"
 
 
