--- a/Patient/Components/Pages/PatientPages/Home.razor
+++ b/Patient/Components/Pages/PatientPages/Home.razor
@@ -1,7 +1,8 @@
-﻿@layout Layout.Layouts.UserLayout
-@page "/lekarz"
+﻿@layout Layout.UserLayout
+@page "/pacjent"
 
-<h3>Home</h3>
+<h3> Panel Pacjenta </h3>
+
 
 @code {
 
