--- a/Patient/Components/Layout/MainLayout.razor
+++ b/Patient/Components/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="page">
     <div class="sidebar">
-        <Patient.Components.Layout.LayoutComponents.NavMenu />
+        <NavMenu />
     </div>
 
     <main>
@@ -14,5 +14,4 @@
             @Body
         </article>
     </main>
-
 </div>
