--- a/Patient/Components/Pages/Weather.razor
+++ b/Patient/Components/Pages/Weather.razor
@@ -1,6 +1,7 @@
-﻿@layout Layout.MainLayout
+﻿ @layout Layout.MainLayout
 @page "/weather"
-@attribute [StreamRendering]
+@* @attribute [StreamRendering] *@
+@rendermode InteractiveServer
 
 <PageTitle>Weather</PageTitle>
 
