--- a/Patient/Components/Layout/UserLayout.razor.css
+++ b/Patient/Components/Layout/UserLayout.razor.css
@@ -6,10 +6,11 @@
 
 main {
     flex: 1;
+    
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(45deg, rgb(0,123,255) 0%, rgb(144, 238, 144)80%);
 }
 
 .top-row {
@@ -48,12 +49,12 @@ main {
 
 @media (min-width: 641px) {
     .page {
-        flex-direction: row;
+        flex-direction: column;
     }
 
     .sidebar {
-        width: 250px;
-        height: 100vh;
+        width: 100vw;
+        height: 100px;
         position: sticky;
         top: 0;
     }
