--- a/Patient/Components/_Imports.razor
+++ b/Patient/Components/_Imports.razor
@@ -8,6 +8,9 @@
 @using Microsoft.JSInterop
 @using Patient
 @using Patient.Components
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+
 
 
 
