--- a/Patient/Components/Layout/PatientMenu.razor
+++ b/Patient/Components/Layout/PatientMenu.razor
@@ -1,19 +1,37 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/pacjent">PatientMenu</a>
-    </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
+﻿
+<div class="container-fluid" onclick="document.querySelector('.navbar-toggler').click()">
+    <nav class="flex-row">
+        <div class="nav-item">
             <NavLink class="nav-link" href="/pacjent" >
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Strona Główna
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Panel pacjenta
             </NavLink>
         </div>
-              
+        <div class="nav-item">
+            <NavLink class="nav-link" href="/pacjent/raporty">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Raporty
+            </NavLink>
+        </div>
+                <div class="nav-item">
+            <NavLink class="nav-link" href="/pacjent/recepty">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Recepty    
+            </NavLink>
+        </div>
+        <div class="nav-item">
+            <NavLink class="nav-link" href="/pacjent/wizyty">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Umow wizyte
+            </NavLink>
+        </div>
+        <div class="nav-item">
+            <NavLink class="nav-link" href="/pacjent/zdrowie">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Zdrowie   
+            </NavLink>
+        </div>
+        <div class="nav-item">
+            <NavLink class="nav-link" href="/pacjent/czat">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Czat    
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
