--- a/Patient/Components/Layout/PatientMenu.razor.css
+++ b/Patient/Components/Layout/PatientMenu.razor.css
@@ -29,13 +29,13 @@
     position: relative;
     width: 1.25rem;
     height: 1.25rem;
-    margin-right: 0.75rem;
     top: -1px;
     background-size: cover;
 }
 
 .bi-house-door-fill-nav-menu {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-house-door-fill' viewBox='0 0 16 16'%3E%3Cpath d='M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5Z'/%3E%3C/svg%3E");
+    
 }
 
 .bi-plus-square-fill-nav-menu {
@@ -49,37 +49,39 @@
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
+    
 }
 
     .nav-item:first-of-type {
-        padding-left: 1rem;
+        
     }
 
     .nav-item:last-of-type {
-        padding-right: 1rem;
+        padding-bottom: 1rem;
     }
 
     .nav-item ::deep .nav-link {
-        color: #d7d7d7;
+        color: black;
         background: none;
         border: none;
         border-radius: 4px;
         height: 3rem;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         line-height: 3rem;
-        width: 20rem;
+        width: 100%;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.37);
-    color: white;
-}
+    .nav-item ::deep a.active {
+        background-color: rgba(255,255,255,0.37);
+        color: white;
+    }
 
-.nav-item ::deep .nav-link:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+    .nav-item ::deep .nav-link:hover {
+        background-color: rgba(255,255,255,0.1);
+        color: white;
+    }
+
 
 .nav-scrollable {
     display: none;
@@ -89,6 +91,8 @@
 .navbar-toggler:checked ~ .nav-scrollable {
     display: block;
 }
+
+
 
 /*tutaj moje*/
 .navbar-row {
@@ -101,6 +105,55 @@
     flex-direction: row;
 }
 
+.menu-item{
+    padding-top: 1rem;
+    text-align: center;
+    align-items: center;
+    
+}
+    .menu-item ::deep .nav-link{
+        color: black;
+    }
+    .menu-item ::deep a.active {
+        background-color: rgba(255,255,255,0.37);
+        color: white;
+    }
+    /*.menu-item ::deep .nav-link:hover {
+        background-color: rgba(255,255,255,0.1);
+        color: white;
+    }*/
+        
+
+
+.myaccount-menu {
+    cursor: pointer;
+    display: block;
+    border: 1px solid black;
+    
+}
+.myaccount-menu-visible{
+    
+}
+.myaccount-menu-notvisible{
+    display: none;
+    
+}
+.myaccount-icon{
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    height: 3rem;
+    width: 3rem;
+    
+    
+}
+
+.d-flex-column{
+    flex-direction: column;
+}
+
+.d-flex-row{
+    flex-direction: row;
+}
 
 @media (min-width: 641px) {
     .navbar-toggler {
@@ -111,8 +164,8 @@
         /* Never collapse the sidebar for wide screens */
         display: block;
         /* Allow sidebar to scroll for tall menus */
-        width: 100vw;
-        
+        width: 80vw;
+         
         overflow-y: auto;
     }
 }
