building reports site

--- a/Patient/Components/Layout/PatientMenu.razor
+++ b/Patient/Components/Layout/PatientMenu.razor
@@ -61,13 +61,13 @@
             <div class="myaccount-menu  @(isAccountMenuVisible ? "myaccount-menu-visible" : "myaccount-menu-notvisible")">
                 <div class="nav-item">
                     <NavLink class="nav-link">
-                        <span aria-hidden="true"></span>Opcja1
+                        <span aria-hidden="true"></span>Moje konto
                         
                     </NavLink>
                 </div>
                 <div class="nav-item">
-                    <NavLink class="nav-link">
-                        <span aria-hidden="true"></span>Opcja2
+                    <NavLink class="nav-link" href="/pacjent/dokumentacja-medyczna">
+                        <span aria-hidden="true"></span>Dokumentacja medyczna
                     </NavLink>
                 </div>
                 <div class="nav-item">
