--- a/Patient/Components/Pages/PatientPages/MedicalDocumentation.razor
+++ b/Patient/Components/Pages/PatientPages/MedicalDocumentation.razor
@@ -1,6 +1,6 @@
 ﻿@layout Patient.Components.Layout.UserLayout
 
-@page "/pacjent/dokumentacja"
+@page "/pacjent/dokumentacja-medyczna"
 
 
 <h3>MedicalDocumentation</h3>
