--- a/Patient/Components/Layout/UserLayout.razor
+++ b/Patient/Components/Layout/UserLayout.razor
@@ -7,7 +7,7 @@
 
     <main>
         
-        <article class="content px-4">
+        <article class="content justify-content-center">
             @Body
         </article>
     </main>
