--- a/Patient/Components/Pages/PatientPages/Forms/CreateReportForm.razor.css
+++ b/Patient/Components/Pages/PatientPages/Forms/CreateReportForm.razor.css
@@ -3,6 +3,39 @@
     border: 1px solid black;
     border-radius: 50%;
 }
+.bi-file-icon {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='60' height='60' fill='currentColor' class='bi bi-file-earmark-fill' viewBox='0 0 16 16'%3E%3Cpath d='M4 0h5.293A1 1 0 0 1 10 .293L13.707 4a1 1 0 0 1 .293.707V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2m5.5 1.5v2a1 1 0 0 0 1 1h2z'/%3E%3C/svg%3E");
+    display: inline-block;
+    position: relative;
+    bottom: 1.25rem;
+    left: 0.125rem;
+    width: 4rem;
+    height: 4rem;
+    background-size: cover;
+}
+.bi-x-circle {
+
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-x-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z'/%3E%3C/svg%3E");
+    position: relative;
+    background-size: cover;
+    width: 1.5rem;
+    height: 1.5rem;
+    left: 3.5rem;
+    top: -0.75rem;
+    background-color: white;
+}
+
+.bi {
+    display: inline-block;
+    position: relative;
+    top: 0.5rem;
+    left: 0.25rem; 
+    width: 4rem;
+    height: 4rem;
+    
+    background-size: cover;
+}
+
 
 .back-icon {
     display: inline-block;
@@ -24,7 +57,28 @@
 .d-flex-column {
     flex-direction: column;
 }
+.d-flex-row{
+    flex-direction: row;
+}
 
 .width-100{
     width: 100%;
+}
+
+
+
+.file-block{
+    display: inline-block;
+    position: relative;
+    width: 4.5rem;
+    height: 5rem;
+    margin-block: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    border: 2px solid black;
+    
+}
+
+.font-10px{
+    font-size: 10px;
 }
