--- a/Patient/Components/PageControlls/Logger.razor
+++ b/Patient/Components/PageControlls/Logger.razor
@@ -1,18 +1,21 @@
 ﻿@rendermode InteractiveServer
 
 
-<div class="login-container" >
-    <div class="login-box">
-        <h2> Logowanie </h2>
-        <div>
-            <label for="username"> Uzytkownik </label>
-            <input type="text" id="username" @bind="username" />
+<div class="container" >
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="login-box" style="position:relative; top: 8rem;" >
+            <h2> Logowanie </h2>
+            <div>
+                <label for="username"> Uzytkownik </label>
+                <input type="text" id="username" @bind="username" />
+            </div>
+            <div>
+                <label for="password"> Haslo </label>
+                <input type="password" id="password" @bind="password" />
+            </div>
+            <button @onclick="OnLogin"> Zaloguj </button>
         </div>
-        <div>
-            <label for="password"> Haslo </label>
-            <input type="password" id="password" @bind="password"/>
-        </div>
-        <button @onclick="OnLogin"> Zaloguj </button>
+        
         
     </div>
 </div>
