--- a/Patient/Components/_Imports.razor
+++ b/Patient/Components/_Imports.razor
@@ -10,7 +10,7 @@
 @using Patient.Components
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
-
+@using Microsoft.AspNetCore.Identity
 
 
 
