--- a/Patient/Components/Layout/NavMenu.razor
+++ b/Patient/Components/Layout/NavMenu.razor
@@ -18,6 +18,11 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Lekarz
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="rejestracja">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Rejestracja
+            </NavLink>
+        </div>
 
 
 
