--- a/Patient.Api/Patient.Api.Client/Pages/MainViewPages/Registration.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/MainViewPages/Registration.razor
@@ -1,6 +1,5 @@
-﻿@using Patient.Api.Components.PageControlls
-@inject NavigationManager Navigation
-@rendermode InteractiveServer
+﻿@inject NavigationManager Navigation
+@rendermode InteractiveWebAssembly
 
 @layout Layout.LoggingLayout
 @page "/rejestracja"
@@ -17,7 +16,9 @@
             <NavLink href="/rejestracjaLekarz">
                 <btn type="button" class="btn btn-primary"> Lekarz</btn>
             </NavLink>
-            
+            <NavLink class="btn btn-primary">
+
+            </NavLink>
         </div>
     </div>
 
