--- a/Patient.Api/Patient.Api.Client/Pages/Registration/RegisterDoctor.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/Registration/RegisterDoctor.razor
@@ -1,5 +1,4 @@
-﻿@using Patient.Api.Components.PageControlls
-@inject NavigationManager Navigation
+﻿@inject NavigationManager Navigation
 @rendermode InteractiveServer
 
 @layout Layout.LoggingLayout
