--- a/Patient.Api/Patient.Api.Client/Pages/Registration/RegisterPatient.razor
+++ b/Patient.Api/Patient.Api.Client/Pages/Registration/RegisterPatient.razor
@@ -1,9 +1,8 @@
-﻿@using Patient.Api.Components.PageControlls
-@using System.Diagnostics
+﻿@using System.Diagnostics
 @using System.Timers
 
 @inject NavigationManager Navigation
-@rendermode InteractiveServer
+@rendermode InteractiveWebAssembly
 
 @layout Layout.LoggingLayout
 @page "/rejestracjapacjent"
